<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StudyFromVideo</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_intentTest">IntentTestActivity</string>
    <string name="title_activity_handlerTest">HandlerTestActivity</string>
    <string name="title_activity_sqliteTest">SQLiteTestActivity</string>
    <string name="title_activity_downloadTest">DownloadTestActivity</string>
    <string name="title_activity_broadcastTest">BroadcastTestActivity</string>
    <string name="title_activity_saxTest">SAXTestActivity</string>
    <string name="title_activity_cpTest">CPTestActivity</string>
    <string name="title_activity_wifiTest">WifiTestActivity</string>
    <string name="title_activity_complexcomp">ComplexCompActivity</string>
    <string name="title_activity_exlistview">EXListViewActivity</string>
    <string name="title_activity_widgetTest">WidgetTestActivity</string>
    <string name="title_activity_animationTest">AnimationTestActivity</string>
    <string name="title_activity_jsonTest">JsonTestActivity</string>
    <string name="title_activity_bluetoothTest">BlueToothTestActivity</string>
    <string name="title_activity_location_test">LocationTestActivity</string>
    <string name="title_activity_sensor_test">SensorTestActivity</string>
    <string name="title_activity_nfc_test">NFCTestActivity</string>
    
    
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="button1">查看Intent测试程序</string>
    <string name="handler_button">查看Handler测试程序</string>
    <string name="sqlite_button">查看SQLite测试程序</string>
    <string name="download_button">查看Download测试程序</string>
    <string name="broadcast_button">查看Broadcast测试程序</string>
    <string name="sax_button">查看解析XML测试程序</string>
    <string name="cp_button">查看contentProvider测试程序</string>
    <string name="wifi_button">查看WIFI测试程序</string>
    <string name="complexcomp_button">查看几个复杂组件测试程序</string>
    <string name="exlistview_button">查看ExpandableListView测试程序</string>
    <string name="widget_button">查看AppWidget测试程序</string>
    <string name="animation_button">查看Animation测试程序</string>
    <string name="json_button">查看JSON测试程序</string>
    <string name="blueTooth_button">查看BlueTooth测试程序</string>
    <string name="location_button">查看User Location测试程序</string>
    <string name="sensor_button">查看Sensor测试程序</string>
    <string name="nfc_button">查看NFC测试程序</string>
    
    <string name="send_mai_button">发送邮件</string>
    <string name="start_handler_button">开始handler</string>
    <string name="download_text_button">下载文本</string>
    <string name="download_file_button">下载文件</string>
    <string name="send_message_button">发送信息给receiver</string>
    <string name="register_button">注册receiver</string>
    <string name="unregister_button">解除注册receiver</string>
    <string name="sax_read_button">使用SAXReadXML</string>
    <string name="sax_write_button">使用SAXWriteXML</string>
    <string name="dom_read_button">使用DOMReadXML</string>
    <string name="dom_write_button">使用DOMWriteXML</string>
    <string name="pull_read_button">使用PullReadXML</string>
    <string name="pull_write_button">使用PullWriteXML</string>
    <string name="insert_button">insert</string>
    <string name="query_button">query</string>
    <string name="start_wifi_button">Start Wifi</string>
    <string name="stop_wifi_button">stop Wifi</string>
    <string name="check_wifi_button">Check Wifi</string>
    <string name="datepick_button">打开DatePicker</string>
    <string name="widget_test_button">测试</string>
    <string name="widget_change_button">测试</string>
    <string name="widget_test_textView">test</string>
    <string name="alpha_button">查看Alpha效果</string>
    <string name="translate_button">查看translate效果</string>
    <string name="rotate_button">查看rotate效果</string>
    <string name="scale_button">查看Scale效果</string>
    <string name="anim_list_button">查看animation在listview中的应用效果</string>
    <string name="frame_change_button">查看图片切换的效果</string>
    <string name="json_common_button">查看Json解析的效果</string>
    <string name="json_object_button">查看Json解析成对象的效果</string>
    <string name="BT_open_button">打开BlueTooth</string>
    <string name="BT_enable_button">设置可见性</string>
    <string name="BT_discover_button">搜索可用设备</string>
    <string name="location_start_button">开始地位</string>
    <string name="geo_button">通过名称获取地址</string>
    <string name="reverseGeo_button">通过地址获取名称</string>
    <string name="sensor_all_button">获取所有的Sensor</string>
    <string name="sensor_acc_button">获取加速度Sensor</string>
    <string name="sensor_pro_button">获取距离Sensor</string>
    
    <string name="exit">退出</string>
    <string name="about">关于</string>
    <string name="info">扫描中。。。</string>

    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

    

</resources>
