<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />
    <Button android:id="@+id/myButton1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button1"/>
    
    <Button android:id="@+id/handler_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/handler_button"/>
    
    <Button android:id="@+id/sqlite_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sqlite_button"/>
    
    <Button android:id="@+id/download_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/download_button"/>
    
    <Button android:id="@+id/broadcast_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/broadcast_button"/>
    
    <Button android:id="@+id/sax_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sax_button"/>
    
    <Button android:id="@+id/cp_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cp_button"/>
    
    <Button android:id="@+id/wifi_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/wifi_button"/>
     
</LinearLayout>
