<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    android:scrollbars="vertical">
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:scrollbars="vertical">
    
    <ImageView android:id="@+id/anim_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher"/>
    
    <Button android:id="@+id/alpha_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/alpha_button"/>
    <Button android:id="@+id/translate_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/translate_button"/>
    <Button android:id="@+id/rotate_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/rotate_button"/>
    <Button android:id="@+id/scale_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/scale_button"/>
    
    <ListView android:id="@+id/anim_listView"
        android:layout_marginTop="50dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layoutAnimation="@anim/list_anim_layout"/>
    
    <Button android:id="@+id/anim_list_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/anim_list_button"/>
    
    <ImageView android:id="@+id/frame_change_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"/>
    <Button android:id="@+id/frame_change_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/frame_change_button"/>
</LinearLayout>
</ScrollView>