<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <Button android:id="@+id/BT_open_button"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/BT_open_button"/>
    
    <Button android:id="@+id/BT_enable_button"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/BT_enable_button"/>
    
    <Button android:id="@+id/BT_discover_button"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/BT_discover_button"/>
    
    <TextView android:id="@+id/bluetooth_textView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
