<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
     <Button android:id="@+id/start_wifi_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_wifi_button"/>
     <Button android:id="@+id/stop_wifi_button"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/stop_wifi_button"/>
     <Button android:id="@+id/check_wifi_button"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/check_wifi_button"/>
     <TextView android:id="@+id/wifi_textView"
         android:layout_height="wrap_content"
         android:layout_width="fill_parent"/>

</LinearLayout>
