<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <Button android:id="@+id/sensor_all_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sensor_all_button"/>
    <Button android:id="@+id/sensor_acc_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sensor_acc_button"/>
    <Button android:id="@+id/sensor_pro_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sensor_pro_button"/>
    
    <TextView android:id="@+id/sensor_textView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>
