<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
     <Button android:id="@+id/send_message_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_message_button"/>
     
      <Button android:id="@+id/register_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_button"/>
      <Button android:id="@+id/unregister_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/unregister_button"/>
      
      <TextView android:id="@+id/receiver_textView"
          android:layout_height="wrap_content"
          android:layout_width="fill_parent"/>

</LinearLayout>
