<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

     <Button android:id="@+id/location_start_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/location_start_button"/>
     
      <Button android:id="@+id/geo__button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/geo_button"/>
      
       <Button android:id="@+id/reverseGeo_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/reverseGeo_button"/>
     
    <TextView
        android:id="@+id/location_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
